codegen/c/src/snapshots/transmute_codegen_c__tests__assignment_if.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
// Begin program code

#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Generated struct declarations


// Generated struct definitions


// Generated function declarations
void _TM0_F1f0(void *parent_frame);

// Generated function frames
typedef struct {
  void *parent;
  union {
    void *pointers[3];
    struct {
      int64_t a_20;
      int64_t e5;
    };
  };
} _TM0_F1f0__frame;

// Generated function declarations
void _TM0_F1f0(void *parent_frame)
{
  // prelude
  _TM0_F1f0__frame me = (_TM0_F1f0__frame){0};
  me.parent = parent_frame;

  if (true) {
    me.e5 = 1;
  }
  else {
    me.e5 = 2;
  }
  me.a_20 = me.e5;
  return;
}

// End program code
